WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
136338
[GTK] ScrollbarThemeGtk should not depend on RenderThemeGtk
https://bugs.webkit.org/show_bug.cgi?id=136338
Summary
[GTK] ScrollbarThemeGtk should not depend on RenderThemeGtk
Carlos Garcia Campos
Reported
2014-08-28 04:30:46 PDT
It's a layering violation (RenderThemeGtk is still in platform, but should be moved to WebCore eventually)
Attachments
Patch
(13.99 KB, patch)
2014-08-28 05:05 PDT
,
Carlos Garcia Campos
pnormand
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Carlos Garcia Campos
Comment 1
2014-08-28 05:05:30 PDT
Created
attachment 237305
[details]
Patch
Carlos Garcia Campos
Comment 2
2014-08-29 00:43:17 PDT
Committed
r173110
: <
http://trac.webkit.org/changeset/173110
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug